Add spring-boot-maven-plugin to create a fully executable jar.